--- a/.config/i3/config
+++ b/.config/i3/config
@@ -41,7 +41,9 @@ bindsym Mod1+Return exec i3-sensible-terminal
 bindsym Mod1+Shift+q kill
 
 # start dmenu (a program launcher)
-bindsym Mod1+d exec dmenu_run
+
+# bindsym Mod1+d exec dmenu_run
+
 # There also is the (new) i3-dmenu-desktop which only displays applications
 # shipping a .desktop file. It is a wrapper around dmenu, so you need that
 # installed.
@@ -165,27 +167,34 @@ bindsym Mod1+r mode "resize"
 # finds out, if available)
 bar {
         status_command i3status
+        
         position top
 }
 
 ######## custom change
 
-# wallpaper
-exec_always feh --bg-fill --bg-scale ~/Downloads/bmyWm0p.png
+# lofi 
+bindsym Mod1+d exec rofi -show run
 
 # i3lock
-bindsym $mod+Shift+l exec i3lock
+bindsym $mod+Shift+Return exec i3lock
+
+# transparency
+exec_always --no-startup-id compton
+
+# wallpaper
+exec_always feh --bg-fill --bg-scale ~/Pictures/wallpaper.jpg
 
 # gap control
-gaps inner 10
+gaps inner 15
 gaps outer 10
 
 # remove titlebar gap
 for_window [class="^.*"] border pixel 0
 
 # audio control
-bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 2 +5% #increase sound volume
-bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 2 -5% #decrease sound volume
-bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 2 toggle # mute sound
+bindsym XF86AudioRaiseVolume exec --no-startup-id pactl set-sink-volume 0 +5% #increase sound volume
+bindsym XF86AudioLowerVolume exec --no-startup-id pactl set-sink-volume 0 -5% #decrease sound volume
+bindsym XF86AudioMute exec --no-startup-id pactl set-sink-mute 0 toggle # mute sound
 
 
